static/src/stylesheets/module/_tabs.scss
/*doc
---
title: Tabs
name: Tab
category: Common
---

```html_example
<div class="tabs u-cf">
    <ol class="tabs__container" role="tablist">
        <li class="tabs__tab tabs__tab--selected" role="tab" id="tabs-example-1-tab" aria-selected="true" aria-controls="tabs-example-1">
            <a href="#tabs-example-1"><span class="hide-until-desktop">Popular in </span>World news</a>
        </li>
        <li class="tabs__tab" role="tab" id="tabs-example-2-tab" aria-controls="tabs-example-2">
            <a href="#tabs-example-2"><span class="hide-until-desktop">Popular in </span>The Guardian</a>
        </li>
    </ol>
    <div class="tabs__content">
        <div id="tabs-example-1" class="tabs__pane u-cf" role="tabpanel" aria-labelledby="tabs-example-1-tab">
            <!-- Content of tab 1 -->
        </div>
        <div id="tabs-example-2" class="tabs__pane modern-hidden u-cf" role="tabpanel" aria-labelledby="tabs-example-2-tab">
            <!-- Content of tab 2 -->
        </div>
    </div>
</div>
```
*/


/* ==========================================================================
   Tabs
   ========================================================================== */

/* Default tabs
   ========================================================================== */

.tabs {
}

.tabs__container {
    position: relative;
    margin: 0;
    padding: 0;
    border-bottom: 0;
    list-style-type: none;
    overflow: hidden;
    z-index: 2;
    background: $neutral-6;
    border-top: 3px solid $neutral-6;

    @include mq(tablet) {
        margin-bottom: -1px;
    }
}

.tabs__tab {
    width: 50%;
    float: left;
    margin: 0;
    border-bottom: 1px solid $neutral-5;
    border-left: 2px solid rgba(255, 255, 255, .75);
    margin-left: -2px;

    @include mq(tablet) {
        max-width: gs-span(3);
    }

    a,
    .tab__link {
        @include fs-headline(2);
        display: block;
        box-sizing: border-box;
        min-height: $gs-row-height;
        padding: $gs-baseline/3 8px 0;
        text-align: left;
        text-decoration: none;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;

        &:active,
        &:focus {
            background-color: #ffffff;
            text-decoration: none;
        }

        @include mq($until: tablet) {
            font-size: 14px;
        }

        @include mq(tablet) {
            padding: $gs-baseline/3 $gs-gutter/2 0;
        }
    }

    a {
        color: inherit;
    }

}

.tabs__tab--selected {
    a,
    .tab__link {
        background: #ffffff;
    }

    @include mq(tablet) {
        border-bottom-color: #ffffff !important;
    }
}

.tabs__content {
    position: relative;
    clear: both;
    padding-top: ($gs-baseline/3)*2;
    z-index: 1;

    @include mq(tablet) {
        border-top: 1px solid $neutral-5;
    }
}

.tabs__content--no-border {
    border-top: 0;
}

.tabs__heading {
    display: none;
}


/**
 * Multiple tabs
 *
 * Used for cases where more than 2 tabs are wanted (eg not two 50% width tabs)
 */

.tabs__container--multiple {
    width: 100%;
    margin: 0;
    margin-bottom: 10px;
    table-layout: fixed;
    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
    display: table;
    display: grid;

    .tabs__tab {
        float: none;
        width: auto;
        max-width: 100%;
        
        @include mq(tablet) {
            display: table-cell;
        }
    }

    @include mq(desktop) {
        .tab--stats {
            display: none;
        }
    }
}

// Most Popular FRONTS customisation: change layout to accommodate MPU (with or without tabs)
.tabs--mostpop .tabs__content,
.fc-slice--popular {
    @include mq(desktop) {
        display: table;
        display: flex;
    }

    .fc-slice__popular-mpu {
        @include mq(desktop) {
            padding-left: $gs-baseline;
        }
    }
}

